2002-10-21
  Updated windows.html and .emacs by Bill Clementson to add support for Corman Lisp 2.0, removed instructions for
  the w3 utility (not necessary for viewing documentation) and provide support in .emacs for auto-detecting which
  lisp implementations have been installed.

2002-10-15
  Updated windows.html by Bill Clementson to include instructions to change lisp-used, EMACSDIR & ILISPDIR variables.

2002-09-23
  Updated windows.html and .emacs by Bill Clementson to support CLISP v2.30.

2002-09-22
  Updated .emacs by Bill Clementson to add generic eval-last-sexp support on C-x C-e for elisp & inferior lisps.

2002-09-03
  Updated windows.html to adjust location of environmental variable instructions.
	
2002-08-29
  updated windows.html and .emacs by Bill Clementson to not show separate ACL listener window on startup.

2002-08-29
  updated windows.html and .emacs by Bill Clementson as follows:
	
  1. Changes for ACL6.2 (use alisp.exe instead of allegro-ansi.exe due to heap size limitations in trial edition).
  2. Eliminate clisp-indent.el from setup to eliminate need to modify .emacs if clisp isn't installed.

2002-08-20
  updated windows.html and .emacs by Bill Clementson as follows:

  1. Support for new versions of Emacs, ILISP, CLISP & ACL
  2. Removed dependency on .bat files
  3. Simplified installation
  4. Made it easier to install only a single (or a few) Lisp implementations
  5. Added shading to pre code blocks as in other Cookbook pages
  6. No longer byte-compile the .emacs file

2002-08-02
  linked systems.html from index.html

2002-08-01
  new chapter systems.html by Alberto Riva

2002-07-08
  typos to process.html. In particular, fix the mailboxes example code. 
	
2002-07-03
  flesh out process.html - complete as it's going to get for now.
	
2002-06-28
  cleanups to process.html and add section on thread state.
	
2002-06-26
  add mp:process-wait to process.html.
	
2002-06-25
  start chapter on threads.

2002-06-21